--- a/syslinux/archiso_head.cfg
+++ b/syslinux/archiso_head.cfg
@@ -1,6 +1,6 @@
 SERIAL 0 115200
 UI vesamenu.c32
-MENU TITLE ArcExp
+MENU TITLE Arch Linux
 MENU BACKGROUND splash.png
 
 MENU WIDTH 78
@@ -13,6 +13,7 @@ MENU HELPMSGROW 16
 MENU HELPMSGENDROW 29
 
 # Refer to http://syslinux.zytor.com/wiki/index.php/Doc/menu
+
 
 MENU COLOR border       30;44   #40ffffff #a0000000 std
 MENU COLOR title        1;36;44 #9033ccff #a0000000 std
