--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -81,6 +81,12 @@ Include = /etc/pacman.d/mirrorlist
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
+#[community-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+[community]
+Include = /etc/pacman.d/mirrorlist
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
@@ -90,8 +96,6 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-# An example of a custom package repository.  See the pacman manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
+[arcexp]
+SigLevel = Optional TrustAll
+Server = https://gitlab.gnome.org/Silvolde/arcexp/-/tree/master/packages/x86_64
