--- a/airootfs/etc/systemd/system.conf
+++ b/airootfs/etc/systemd/system.conf
@@ -44,14 +44,14 @@
 #DefaultStandardOutput=journal
 #DefaultStandardError=inherit
 #DefaultTimeoutStartSec=90s
-DefaultTimeoutStopSec=15s
+#DefaultTimeoutStopSec=90s
 #DefaultTimeoutAbortSec=
 #DefaultDeviceTimeoutSec=90s
 #DefaultRestartSec=100ms
 #DefaultStartLimitIntervalSec=10s
 #DefaultStartLimitBurst=5
 #DefaultEnvironment=
-#DefaultCPUAccounting=no
+#DefaultCPUAccounting=yes
 #DefaultIOAccounting=no
 #DefaultIPAccounting=no
 #DefaultMemoryAccounting=yes
@@ -73,6 +73,8 @@ DefaultTimeoutStopSec=15s
 #DefaultLimitNICE=
 #DefaultLimitRTPRIO=
 #DefaultLimitRTTIME=
+#DefaultMemoryPressureThresholdSec=200ms
+#DefaultMemoryPressureWatch=auto
 #DefaultOOMPolicy=stop
 #DefaultSmackProcessLabel=
 #ReloadLimitIntervalSec=
